--- a/collector/otel-collector.yml
+++ b/collector/otel-collector.yml
@@ -5,8 +5,8 @@ receivers:
       grpc:
 
 processors:
-  # batch metrics before sending to reduce API usage
-  batch:
+  batch: # batch metrics before sending to reduce API usage
+    timeout: 3s
 
 exporters:
   prometheus:
@@ -14,22 +14,20 @@ exporters:
     const_labels:
       label1: spring
   otlp:
-    endpoint: tempo:4317  # tempo container host and port
+    endpoint: tempo:4317
     tls:
       insecure: true
+  loki:
+    endpoint: "http://loki:3100/loki/api/v1/push"
 
 extensions:
-  # responsible for responding to health check calls on behalf of the collector.
   health_check:
-  # fetches the collector’s performance data
   pprof:
-  # serves as an http endpoint that provides live debugging data about instrumented components.
   zpages:
 
 service:
   extensions: [health_check, pprof, zpages]
   pipelines:
-    # for now we only interested about metrics...
     metrics:
       receivers: [otlp]
       processors: [batch]
@@ -38,6 +36,6 @@ service:
       receivers: [otlp]
       processors: [batch]
       exporters: [otlp]
-#    logs:
-#      receivers: [otlp]
-#      exporters: [loki]
+    logs:
+      receivers: [otlp]
+      exporters: [loki]
