--- a/docker-compose-observability.yml
+++ b/docker-compose-observability.yml
@@ -32,13 +32,11 @@ services:
     ports:
       - "3000:3000"
   
-#  jaeger:
-#    container_name: jaeger
-#    image: jaegertracing/all-in-one:1.53
-#    ports:
-#      - "16686:16686"
-#      - "4317:4317"
-#      - "4318:4318"
+  loki:
+    image: grafana/loki:latest
+    command: -config.file=/etc/loki/local-config.yaml
+    ports:
+      - "3100:3100"
   
   tempo:
     image: grafana/tempo:latest
@@ -46,6 +44,13 @@ services:
     volumes:
       - ./tempo/tempo.yml:/etc/tempo.yml
     ports:
-      - "3200:3200"   # tempo
-      - "4317"  # otlp grpc
-  
+      - "3200:3200" # tempo
+      - "4317" # otlp grpc
+
+#  jaeger:
+#    container_name: jaeger
+#    image: jaegertracing/all-in-one:1.53
+#    ports:
+#      - "16686:16686"
+#      - "4317:4317"
+#      - "4318:4318"
