--- a/tempo/tempo.yml
+++ b/tempo/tempo.yml
@@ -2,19 +2,18 @@ server:
   http_listen_port: 3200
 
 distributor:
-  receivers:                           # this configuration will listen on all ports and protocols that tempo is capable of.
+  receivers:
     otlp:
       protocols:
         http:
         grpc:
 
 ingester:
-  max_block_duration: 5m               # cut the headblock when this much time passes.
-                                       # this is being set for demo purposes and should probably be left alone normally
+  max_block_duration: 5m # cut the headblock when this much time passes
 
 compactor:
   compaction:
-    block_retention: 1h                # overall Tempo trace retention. set for demo purposes
+    block_retention: 1h # overall Tempo trace retention
 
 metrics_generator:
   registry:
@@ -26,11 +25,11 @@ metrics_generator:
 
 storage:
   trace:
-    backend: local                     # backend configuration to use
+    backend: local
     wal:
-      path: /tmp/tempo/wal             # where to store the the wal locally
+      path: /tmp/tempo/wal
     local:
       path: /tmp/tempo/blocks
 
 overrides:
-  metrics_generator_processors: [service-graphs, span-metrics] # enables metrics generator
+  metrics_generator_processors: [service-graphs, span-metrics]
