working tempo, loki with otel and grafana

--- a/kubernetes/deployment/kustomization.yml
+++ b/kubernetes/deployment/kustomization.yml
@@ -4,10 +4,9 @@ kind: Kustomization
 namespace: monitoring
 
 resources:
-- namespace.yml
-#- loki/
-#- prometheus/
-#- promtail/
-#- tempo/
-#- mimir/
-- grafana/
+  - namespace.yml
+  - otel-collector/
+  - grafana/
+  - loki/
+  - tempo/
+  - minio
