--- a/kubernetes/deployment/grafana/cm.yml
+++ b/kubernetes/deployment/grafana/cm.yml
@@ -2,39 +2,47 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-    name: dashboards
-    labels:
-        app.kubernetes.io/name: grafana
-data:
-    dashboards.yml: |-
-      apiVersion: 1
-      providers:
-        - name: default # A uniquely identifiable name for the provider
-          type: file
-          allowUiUpdates: false
-          disableDeletion: false
-          editable: true
-          updateIntervalSeconds: 10
-          options:
-            path: /var/lib/grafana/dashboards
-            foldersFromFilesStructure: true
-      dashboards:
-        default:
-          NodeJS:
-            gnetId: 19062
-            datasource: Prometheus
-          Requests:
-            gnetId: 20371
-            datasource: Prometheus
-
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
     name: datasources
     labels:
         app.kubernetes.io/name: grafana
 data:
+    tempo.yaml: |-
+      apiVersion: 1
+      datasources:
+        - name: Tempo
+          type: tempo
+          access: proxy
+          editable: true
+          url: 'http://tempo.monitoring:3200'
+          jsonData:
+            httpMethod: GET
+            tracesToLogs:
+              datasourceUid: Loki
+            tracesToLogsV2:
+              datasourceUid: Loki
+            tracesToMetrics:
+              datasourceUid: Prometheus
+            serviceMap:
+              datasourceUid: Prometheus
+            nodeGraph:
+              enabled: true
+            lokiSearch:
+              datasourceUid: Loki
+    loki.yaml: |-
+      apiVersion: 1
+      datasources:
+        - name: Loki
+          type: loki
+          access: proxy
+          editable: true
+          url: 'http://loki.monitoring:3100'
+          jsonData:
+            maxLines: 1000
+            derivedFields:
+              - datasourceUid: Tempo
+                matcherRegex: '"trace_id":"(.+?)"'
+                name: TraceID
+                url: "$${__value.raw}"
     mimir.yaml: |-
         apiVersion: 1
         datasources:
@@ -63,40 +71,3 @@ data:
             manageAlerts: true
             prometheusType: Prometheus
             maxLines: 1000
-    loki.yaml: |-
-        apiVersion: 1
-        datasources:
-        - name: Loki
-          type: loki
-          access: proxy
-          editable: true
-          url: http://loki:3100
-          jsonData:
-            maxLines: 1000
-            derivedFields:
-              - datasourceUid: Tempo
-                matcherRegex: '"trace_id":"(.+?)"'
-                name: TraceID
-                url: "$${__value.raw}"
-    tempo.yaml: |-
-        apiVersion: 1
-        datasources:
-        - name: Tempo
-          type: tempo
-          access: proxy
-          editable: true
-          url: http://tempo:3100
-          jsonData:
-            httpMethod: GET
-            tracesToLogs:
-              datasourceUid: Loki
-            tracesToLogsV2:
-              datasourceUid: Loki
-            tracesToMetrics:
-              datasourceUid: Prometheus
-            serviceMap:
-              datasourceUid: Prometheus
-            nodeGraph:
-              enabled: true
-            lokiSearch:
-              datasourceUid: Loki
