--- a/kubernetes/deployment/loki/kustomization.yml
+++ b/kubernetes/deployment/loki/kustomization.yml
@@ -3,12 +3,11 @@ kind: Kustomization
 
 resources:
     - cm.yml
-    - deployment.yml
     - service.yml
-#    - ingress.yml
+    - statefulset.yml
 
 labels:
     - includeSelectors: true
       pairs:
           app.kubernetes.io/created-by: kustomizer
-          app.kubernetes.io/name: grafana
+          app.kubernetes.io/name: loki
