--- a/kubernetes/deployment/tempo/kustomization.yml
+++ b/kubernetes/deployment/tempo/kustomization.yml
@@ -2,13 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+    - account.yml
     - cm.yml
-    - deployment.yml
     - service.yml
-#    - ingress.yml
+    - statefulset.yml
 
 labels:
     - includeSelectors: true
       pairs:
           app.kubernetes.io/created-by: kustomizer
-          app.kubernetes.io/name: grafana
+          app.kubernetes.io/name: tempo
