--- a/kubernetes/deployment/grafana/deployment.yml
+++ b/kubernetes/deployment/grafana/deployment.yml
@@ -48,6 +48,10 @@ spec:
               mountPath: /etc/grafana/provisioning/datasources/loki.yaml
               subPath: loki.yaml
               readOnly: false
+            - name: datasources
+              mountPath: /etc/grafana/provisioning/datasources/prometheus.yaml
+              subPath: prometheus.yaml
+              readOnly: false
       volumes:
         - name: datasources
           configMap:
