--- a/kubernetes/deployment/kustomization.yml
+++ b/kubernetes/deployment/kustomization.yml
@@ -5,8 +5,9 @@ namespace: monitoring
 
 resources:
   - namespace.yml
-  - otel-collector/
-  - grafana/
-  - loki/
-  - tempo/
+  - otel-collector
+  - grafana
+  - prometheus
+  - loki
+  - tempo
   - minio
