--- a/kubernetes/deployment/prometheus/kustomization.yml
+++ b/kubernetes/deployment/prometheus/kustomization.yml
@@ -2,13 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - cm.yml
+  - pvc.yml
   - deployment.yml
   - service.yml
-#    - ingress.yml
+  - cm.yml
 
 labels:
   - includeSelectors: true
     pairs:
-      app.kubernetes.io/created-by: kustomizer
-      app.kubernetes.io/name: grafana
+      app: prometheus
+      component: prometheus
