--- a/kubernetes/deployment/prometheus/pvc.yml
+++ b/kubernetes/deployment/prometheus/pvc.yml
@@ -1,14 +1,12 @@
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: pvc-prometheus
   labels:
-    app.kubernetes.io/name: minio
-  name: minio
-  namespace: minio
+    name: pvcprometheus
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 20Gi
+      storage: 5Gi
